core/authentik/server/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: 202.215.58.76
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`authentik.mtaku3.com`)
    kind: Rule
    services:
      - name: authentik-server
        port: http
  tls:
    secretName: authentik-tls
